# SimplePointCloudViewer

./: .gitignore  CLAUDE.md  CMakeLists.txt  NOTES.md  README.md
resources/shaders/: fragment.glsl  vertex.glsl
src/: GLPointCloudWidget.cpp  GLPointCloudWidget.h  MainWindow.cpp  MainWindow.h  PointCloud.cpp  PointCloud.h  PointCloudIO.cpp  PointCloudIO.h  main.cpp
